syntax = "proto3";

package yandex.cloud.priv.marketplace.licenseserver.v1.license;

import "google/protobuf/timestamp.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/marketplace/licenseserver/v1/license;license";
option java_package = "LL";

message Lock {
    string id = 1;
    string instance_id = 2;
    string resource_lock_id = 3;
    google.protobuf.Timestamp start_time = 4;
    google.protobuf.Timestamp end_time = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    State state = 8;

    enum State {
        STATE_UNSPECIFIED = 0;
        UNLOCKED = 1;
        LOCKED = 2;
        DELETED = 3;
    }
}
