package NCS.NStorage;

message TMigrationHeader {
    optional bool AutoApply = 1 [default = true];
    optional bool Required = 2 [default = true];
    optional uint32 MaxAttempts = 3;
    optional uint32 TimeoutS = 4;
}
